# Chionophile

./: .gitignore  README.md
Benchmark/: Cargo.toml  example_script.sh
Benchmark/.cargo/: config
Benchmark/src/: main.rs  models.rs
Benchmark/src/benchmark/: load_test.rs  mod.rs
Benchmark/src/benchmark/tasksets/: logic.rs
Benchmark/src/models/: accesscode_post_data.rs  mod.rs
Java/: pom.xml
actions/benchmark/: Cargo.toml
actions/benchmark/src/: main.rs
actions/benchmark/src/benchmark/: benchmark.rs  test.rs
actions/benchmark/src/input/: argument_parser.rs  benchmark.rs  benchmark_config.rs  http_methods.rs  mod.rs  request.rs  request_group.rs  test.rs  test_group.rs  validator.rs
push_to_the_edges/edge_server/cache_manager/: Cargo.toml
push_to_the_edges/edge_server/cache_manager/.cargo/: config
push_to_the_edges/edge_server/cache_manager/src/: main.rs
push_to_the_edges/edge_server/cache_manager/src/api/: cache_error.rs  cache_repository.rs  cache_service.rs  mod.rs
push_to_the_edges/edge_server/cache_manager/src/core/: mod.rs
push_to_the_edges/edge_server/cache_manager/src/core/accesscodemanagement/: accesscode_repository.rs  mod.rs
push_to_the_edges/edge_server/cache_manager/src/core/cache_service/: cache_service_impl.rs  mod.rs
push_to_the_edges/edge_server/cache_manager/src/core/queuemanagement/: queue_repository.rs
push_to_the_edges/edge_server/cache_manager/src/core/visitormanagement/: visitor_repository.rs
push_to_the_edges/edge_server/cache_manager/src/general/config/: app_config.rs  mod.rs
push_to_the_edges/edge_server/server/: Cargo.toml
push_to_the_edges/edge_server/server/migrations/2022-02-24-112914_visitor/: up.sql
push_to_the_edges/edge_server/server/src/: main.rs
push_to_the_edges/edge_server/server/src/api/common/: mod.rs
push_to_the_edges/edge_server/server/src/api/visitormanagement/: mod.rs
push_to_the_edges/edge_server/server/src/core/general/: mod.rs
push_to_the_edges/powertop_manager/: Cargo.toml
push_to_the_edges/powertop_manager/.cargo/: config
push_to_the_edges/powertop_manager/src/: config.rs  controller.rs  main.rs  powertop_params.rs
rust-simplified/: Cargo.toml  Dockerfile
rust-simplified/custom_derive/: Cargo.toml
rust-simplified/custom_derive/src/: lib.rs
rust-simplified/migrations/2022-02-24-112914_visitor/: down.sql
rust-simplified/src/: main.rs
rust-simplified/src/api/: mod.rs
rust-simplified/src/api/controller/: accesscode_management_controller.rs  accesscode_management_service_impl.rs  crud_rest_service.rs  mod.rs  queue_management_controller.rs  queue_management_service_impl.rs  rest_controller.rs  visitor_management_controller.rs  visitor_management_service_impl.rs
rust-simplified/src/api/errors/: mod.rs  save_error.rs
rust-simplified/src/api/model/: accesscode_cto.rs  accesscode_eto.rs  mod.rs  queue_eto.rs  visitor_eto.rs
rust-simplified/src/domain/: mod.rs
rust-simplified/src/domain/config/: service_config.rs
rust-simplified/src/domain/models/: accesscode.rs  entity.rs  mod.rs  new_accesscode.rs  new_entity.rs  new_queue.rs  new_visitor.rs  queue.rs  visitor.rs
rust-simplified/src/domain/repositories/: accesscode_repository_impl.rs  mod.rs  queue_repository_impl.rs  repository.rs  visitor_repository_impl.rs
rust-simplified/src/domain/search/: pageable.rs  search_result.rs  sort.rs
rust-simplified/src/domain/state/: app_state.rs
rust-simplified/src/domain/tos/: accesscode_search_criteria.rs  mod.rs  queue_search_criteria.rs  visitor_search_criteria.rs
rust_template/: Cargo.toml  README.md
rust_template/.cargo/: config
rust_template/migrations/2022-03-22-093915_template/: down.sql  up.sql
rust_template/src/: main.rs
rust_template/src/api/: mod.rs
rust_template/src/api/common/dataaccess/api/: entity.rs  new_entity.rs
rust_template/src/api/common/logic/api/: criteria.rs  eto.rs
rust_template/src/api/common/rest/: crud_rest_service.rs  rest_controller.rs
rust_template/src/api/usermanagement/: mod.rs
rust_template/src/api/usermanagement/dataaccess/: user_repository.rs
rust_template/src/api/usermanagement/logic/: mod.rs  user_management.rs
rust_template/src/api/usermanagement/logic/usecase/: uc_find_user.rs  uc_manage_user.rs
rust_template/src/api/usermanagement/rest/api/: mod.rs  user_management_service.rs
rust_template/src/core/general/: mod.rs
rust_template/src/core/general/config/: app_config.rs  dbtypes_config.rs  service_config.rs
rust_template/src/core/general/database/: schema.rs
rust_template/src/core/general/search/: mod.rs  pageable.rs
rust_template/src/core/general/security/: hashser.rs  mod.rs
rust_template/src/core/general/state/: app_state.rs
rust_template/src/core/usermanagement/dataaccess/api/: mod.rs  new_user.rs  user.rs
rust_template/src/core/usermanagement/logic/: mod.rs  user_management_impl.rs
rust_template/src/core/usermanagement/logic/api/: user_eto.rs  user_search_criteria.rs
rust_template/src/core/usermanagement/logic/usecase/: mod.rs  uc_find_user_impl.rs  uc_manage_user_impl.rs
rust_template/src/core/usermanagement/rest/: mod.rs  user_management_controller.rs  user_management_service_impl.rs
rust_template/src/lib/: mod.rs
rust_template/src/lib/general/: mod.rs
rust_template/src/lib/general/config/: app_config.rs  mod.rs  service_config.rs
rust_template/src/lib/general/search/: mod.rs  pageable.rs  search_result.rs  string_search_config.rs  string_search_operator.rs
rust_template/src/lib/usermanagement/: mod.rs
rust_template/src/lib/usermanagement/logic/: mod.rs  user_management.rs
rust_template/src/lib/usermanagement/rest/: mod.rs  user_management_controller.rs  user_management_service.rs
wasm/rust/: Cargo.toml  spin.toml
wasm/rust/src/: lib.rs
wasm/rust/src/accesscode/: accesscode.rs  mod.rs  router.rs
wasm/rust/src/queue/: mod.rs  queue.rs  router.rs
wasm/rust/src/util/: mod.rs  path_parameters.rs  router.rs
wasm/rust/src/visitor/: mod.rs  router.rs
wasm/rust_atmos/PostQueue/: .runnable.yaml  Cargo.toml
wasm/rust_atmos/PostQueue/src/: lib.rs
(+940 files in other folders)
