[package]
name = "Benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goose = "0.15.2"
tokio = "^1.12"
serde_json = "^1.0"
serde = "1.0.136"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = {version = "0.4", features = ["serde"] }