[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Console Arguments
clap = { version = "3.1.12", features = ["derive"] }
# Benchmark framework
goose = "0.15.2"
# logging
log = "0.4.16"
env_logger = "0.9.0"
# async library
tokio = "^1.12"
# Deserialize and serialize
serde = "1.0.136"
serde_json = "^1.0"
serde_yaml = "^0.8.23"
#async traits
async-trait = "0.1.53"
