[package]
name = "powertop_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
actix-rt = "2.7.0"
serde = {version="1.0.137", features=["derive"]}
serde_json = "1.0.81"


