[package]
name = "cache_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
diesel = { version = "1.4.8", features = ["r2d2", "time", "numeric","num-integer", "chrono", "postgres"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = {version = "0.4", features = ["serde"] }
serde_json = "1.0"

