[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.1"
diesel = { version = "1.4.8", features = ["r2d2", "time", "numeric","num-integer", "chrono", "postgres"] }
diesel-derive-enum = {version = "1.1.2", features=["postgres"]}
dotenv = "0.15"
env_logger = "0.9.0"
failure = "0.1.8"
futures = "0.3.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
prost = "0.7"
prost-types = "0.7"
chrono = {version = "0.4", features = ["serde"] }
parking_lot = "0.11"
async-trait = "0.1.52"
async-std = { version = "1", features = ["attributes", "tokio1"] }
num_cpus = "0.2"
actix-rt = "2.7.0"
validator = { version = "0.12", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"] }

[dev-dependencies]
actix-rt = "2.6.0"
actix-http = "3.0.0"
actix-service = "2.0.2"